--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,20 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#7d22ff</color>
+    <color name="pink_01">#66e062ff</color>
+    <color name="pink_02">#11e062ff</color>
+    <color name="gradient_purple">#6b19ff</color>
+    <color name="gradient_pink">#fd62ff</color>
+    <color name="black_01">#000000</color>
+    <color name="black_02">#111111</color>
+    <color name="grey_01">#5f5f69</color>
+    <color name="grey_02">#52514d</color>
+    <color name="grey_03">#555555</color>
+    <color name="grey_04">#888888</color>
+    <color name="grey_05">#939393</color>
+    <color name="grey_06">#d1d1d1</color>
+    <color name="grey_07">#d6d6d6</color>
+    <color name="grey_08">#e9e9e9</color>
+    <color name="grey_09">#eeeff1</color>
 </resources>
