--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         tools:context=".presentation.MainActivity">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_profil"
+            android:id="@+id/iv_mainpage_profil"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
@@ -26,19 +26,19 @@
             app:shapeAppearanceOverlay="@style/Circle" />
 
         <TextView
-            android:id="@+id/tv_nickname"
+            android:id="@+id/tv_mainpage_nickname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_profil"
-            app:layout_constraintStart_toEndOf="@id/iv_profil"
-            app:layout_constraintTop_toTopOf="@+id/iv_profil"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_mainpage_profil"
+            app:layout_constraintStart_toEndOf="@id/iv_mainpage_profil"
+            app:layout_constraintTop_toTopOf="@+id/iv_mainpage_profil"
             tools:text="이준희" />
 
         <TextView
-            android:id="@+id/tv_description"
+            android:id="@+id/tv_mainpage_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
@@ -46,49 +46,49 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/mainpage_description"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_nickname"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_mainpage_nickname"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_nickname"
-            app:layout_constraintTop_toTopOf="@+id/tv_nickname" />
+            app:layout_constraintStart_toEndOf="@+id/tv_mainpage_nickname"
+            app:layout_constraintTop_toTopOf="@+id/tv_mainpage_nickname" />
 
         <TextView
-            android:id="@+id/tv_id_title"
+            android:id="@+id/tv_mainpage_id_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="@string/mainpage_id"
             android:textSize="25sp"
-            app:layout_constraintStart_toStartOf="@id/iv_profil"
-            app:layout_constraintTop_toBottomOf="@+id/iv_profil" />
+            app:layout_constraintStart_toStartOf="@id/iv_mainpage_profil"
+            app:layout_constraintTop_toBottomOf="@+id/iv_mainpage_profil" />
 
         <TextView
-            android:id="@+id/tv_id"
+            android:id="@+id/tv_mainpage_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:textColor="@color/grey_04"
-            app:layout_constraintStart_toStartOf="@id/tv_id_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_id_title"
+            app:layout_constraintStart_toStartOf="@id/tv_mainpage_id_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id_title"
             tools:text="alkfmd" />
 
         <TextView
-            android:id="@+id/tv_mbti_title"
+            android:id="@+id/tv_mainpage_mbti_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/mainpage_mbti"
             android:textSize="25sp"
-            app:layout_constraintStart_toStartOf="@id/tv_id"
-            app:layout_constraintTop_toBottomOf="@id/tv_id" />
+            app:layout_constraintStart_toStartOf="@id/tv_mainpage_id"
+            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id" />
 
         <TextView
-            android:id="@+id/tv_mbti"
+            android:id="@+id/tv_mainpage_mbti"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:textColor="@color/grey_04"
-            app:layout_constraintStart_toStartOf="@id/tv_mbti_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_mbti_title"
+            app:layout_constraintStart_toStartOf="@id/tv_mainpage_mbti_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_mbti_title"
             tools:text="alkfmd" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
