자동로그인 완료

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,15 @@
                     app:layout_constraintStart_toStartOf="@+id/et_login_pw"
                     app:layout_constraintTop_toBottomOf="@+id/et_login_pw" />
 
+                <TextView
+                    android:id="@+id/tv_login_auto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_auto"
+                    app:layout_constraintBottom_toBottomOf="@+id/cb_login"
+                    app:layout_constraintStart_toEndOf="@id/cb_login"
+                    app:layout_constraintTop_toTopOf="@+id/cb_login" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
