--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,5 +91,16 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_mbti_title"
             tools:text="alkfmd" />
 
+        <TextView
+            android:id="@+id/tv_mainpage_logout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/mainpage_logout"
+            android:textColor="@color/grey_05"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_mbti" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
