--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,8 +29,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_login"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_title">
+            app:layout_constraintBottom_toTopOf="@id/btn_login"
+            app:layout_constraintTop_toBottomOf="@id/tv_login_title">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -92,8 +92,8 @@
                     android:layout_height="wrap_content"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    app:layout_constraintStart_toStartOf="@+id/et_login_pw"
-                    app:layout_constraintTop_toBottomOf="@+id/et_login_pw" />
+                    app:layout_constraintStart_toStartOf="@id/et_login_pw"
+                    app:layout_constraintTop_toBottomOf="@id/et_login_pw" />
 
                 <TextView
                     android:id="@+id/tv_login_auto"
@@ -102,7 +102,7 @@
                     android:text="@string/login_auto"
                     app:layout_constraintBottom_toBottomOf="@+id/cb_login"
                     app:layout_constraintStart_toEndOf="@id/cb_login"
-                    app:layout_constraintTop_toTopOf="@+id/cb_login" />
+                    app:layout_constraintTop_toTopOf="@id/cb_login" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
