--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.MainActivity">
+        tools:context=".presentation.HomeActivity">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_mainpage_profil"
@@ -34,7 +34,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/iv_mainpage_profil"
             app:layout_constraintStart_toEndOf="@id/iv_mainpage_profil"
-            app:layout_constraintTop_toTopOf="@+id/iv_mainpage_profil"
+            app:layout_constraintTop_toTopOf="@id/iv_mainpage_profil"
             tools:text="이준희" />
 
         <TextView
@@ -48,8 +48,8 @@
             android:text="@string/mainpage_description"
             app:layout_constraintBottom_toBottomOf="@+id/tv_mainpage_nickname"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_mainpage_nickname"
-            app:layout_constraintTop_toTopOf="@+id/tv_mainpage_nickname" />
+            app:layout_constraintStart_toEndOf="@id/tv_mainpage_nickname"
+            app:layout_constraintTop_toTopOf="@id/tv_mainpage_nickname" />
 
         <TextView
             android:id="@+id/tv_mainpage_id_title"
@@ -59,7 +59,7 @@
             android:text="@string/mainpage_id"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="@id/iv_mainpage_profil"
-            app:layout_constraintTop_toBottomOf="@+id/iv_mainpage_profil" />
+            app:layout_constraintTop_toBottomOf="@id/iv_mainpage_profil" />
 
         <TextView
             android:id="@+id/tv_mainpage_id"
@@ -88,7 +88,7 @@
             android:layout_marginTop="15dp"
             android:textColor="@color/grey_04"
             app:layout_constraintStart_toStartOf="@id/tv_mainpage_mbti_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_mbti_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti_title"
             tools:text="alkfmd" />
 
         <TextView
@@ -100,7 +100,7 @@
             android:text="@string/mainpage_logout"
             android:textColor="@color/grey_05"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_mbti" />
+            app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
