--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_home" />
+            app:menu="@menu/menu_home"
+            app:defaultNavHost="true"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
