--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,7 +11,7 @@
         android:id="@+id/layout_signup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.SignUpActivity">
+        tools:context=".presentation.auth.SignUpActivity">
 
         <TextView
             android:id="@+id/tv_signup_title"
